--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,68 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos{
+    content-visibility: hidden;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres{
+    position: absolute;
+    top: 100px;
+    left:200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro{
+    position: fixed;
+    top:0;
+    left:0;
+}
 
 
 /* Ejercicio 5: */
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row-reverse;  /*Ejercicio 6. */
+}
 
 /* Acá va tu código */
+#ejercicioSiete{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 
+#elementoUno{
+    justify-content: center;
+    align-self: flex-start;
+}
 
+#elementoTres{
+    justify-content: center;
+    align-self: flex-end;
+}
 
-/* Ejercicio 6. */
+#elementoDos{
+    justify-content: center;
+}
+
+#elementoCuatro{
+    justify-content: center;
+}
